--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mongoose": "^5.12.13",
+    "nodejs-websocket": "^1.7.2",
     "nodemon": "^2.0.7",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.12",
