--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Davette Bryan, Robert Du, Victor Luo, Michael Weber",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "concurrently": "^6.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
