--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@material-ui/core": "^4.11.4",
     "concurrently": "^6.2.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
