--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "concurrently": "^6.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
